Reimplementation of controller sound system